表格导入功能-Easy-Excel 整合Mybatis-Plus

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,7 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
-      classpath:/spring-mybatis.xml
+      classpath:spring-mybatis.xml
     </param-value>
   </context-param>
 
