--- a/pom.xml
+++ b/pom.xml
@@ -176,15 +176,15 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.9.4</version>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.apache.commons</groupId>-->
+<!--      <artifactId>commons-io</artifactId>-->
+<!--      <version>1.3.2</version>-->
+<!--    </dependency>-->
     <dependency>
-      <groupId>commons-fileupload</groupId>
-      <artifactId>commons-fileupload</artifactId>
-      <version>1.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
+      <groupId>com.github.datastax-oss</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.3.2</version>
+      <version>2.2.0</version>
     </dependency>
 <!--    EasyExcel-->
     <dependency>
@@ -207,6 +207,18 @@
       <groupId>com.baomidou</groupId>
       <artifactId>mybatis-plus</artifactId>
       <version>3.5.1</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.tencentcloudapi</groupId>
+      <artifactId>tencentcloud-sdk-java</artifactId>
+      <!-- go to https://search.maven.org/search?q=tencentcloud-sdk-java and get the latest version. -->
+      <!-- 请到https://search.maven.org/search?q=tencentcloud-sdk-java查询所有版本，最新版本如下 -->
+      <version>3.1.322</version>
     </dependency>
   </dependencies>
 
