--- a/pom.xml
+++ b/pom.xml
@@ -213,12 +213,19 @@
       <artifactId>commons-fileupload</artifactId>
       <version>1.3.2</version>
     </dependency>
+<!--    腾讯云验证码-->
     <dependency>
       <groupId>com.tencentcloudapi</groupId>
       <artifactId>tencentcloud-sdk-java</artifactId>
       <!-- go to https://search.maven.org/search?q=tencentcloud-sdk-java and get the latest version. -->
       <!-- 请到https://search.maven.org/search?q=tencentcloud-sdk-java查询所有版本，最新版本如下 -->
       <version>3.1.322</version>
+    </dependency>
+    <!-- 天爱验证码maven 导入 -->
+    <dependency>
+      <groupId>cloud.tianai.captcha</groupId>
+      <artifactId>tianai-captcha</artifactId>
+      <version>1.2.7</version>
     </dependency>
   </dependencies>
 
